node-ports/coffee/coffee-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: coffee-service
spec: 
  type: NodePort
  selector: 
    app: coffee
  ports: 
    - port: 8083
      targetPort: 80
      nodePort: 30004
